samples/_failures_safe/1761537124_7dbaa0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1bdb1631.c: In function ‘main’:
./samples/SAFE/__tmp_1bdb1631.c:170:13: error: expected declaration or statement at end of input
  170 |             case 5:
      |             ^~~~
./samples/SAFE/__tmp_1bdb1631.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1bdb1631.c:170:13: error: expected declaration or statement at end of input
